new file:   requirements.dev.txt

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="dark">
 <head>
   <meta charset="utf-8" />
-  <title>Real-time QoE</title>
+  <title>Real-time QoE Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   
   <!-- Google Fonts -->
